align img and fix text spacing

--- a/component-library/components/colorblock-rotating-img/colorblock-rotating-img.scss
+++ b/component-library/components/colorblock-rotating-img/colorblock-rotating-img.scss
@@ -1,7 +1,5 @@
 .c-color-block-rotating {
   position: relative;
-  min-height: 30rem;
-  justify-items: center;
 
   .container {
     display: grid;
@@ -9,11 +7,14 @@
     width: 100%;
   }
 
+  .color-block-text {
+    padding: Min(1rem, 2vw) Min(2rem, 8vw);
+  }
+
   .__text {
     color: white;
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: bold;
-    margin-top: 2rem;
   }
   .__subtext {
     color: white;
@@ -22,17 +23,13 @@
   }
 
   .image {
-    position: relative;
     display: flex;
-    // align-items: center;
-    justify-content: center;
-    width: 50%;
-    padding: Min(2rem, 4vw) Min(4rem, 8vw);
-    margin-top: 2rem;
+    justify-content: end;
+    align-items: center;
+    padding: Min(1rem, 4vw) Min(2rem, 8vw);
 
     img {
-      position: absolute;
-      width: clamp(80px, 30vw, 300px);
+      width: clamp(50px, 20vw, 200px);
       height: auto;
       object-fit: cover;
       border-radius: 0.25rem;
